test/samples/error/len_err.w
var x = 1
print(len(x))
